tests/spec/parse/snapshots/function_main.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn main() {
     let total = 7 + 5;
     let is_active = true;
     let pi = 3.14;
     let name = "Lisette";
     let initial = 'L';
     match total {
         12 => print("Correct!"),
         _  => print("Incorrect!"),
     }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "main",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "total",
                            span: Span {
                                file_id: 0,
                                byte_offset: 20,
                                byte_length: 5,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Binary {
                        operator: Addition,
                        left: Literal {
                            literal: Integer {
                                value: 7,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 28,
                                byte_length: 1,
                            },
                        },
                        right: Literal {
                            literal: Integer {
                                value: 5,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 32,
                                byte_length: 1,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 5,
                        },
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    assert: false,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 17,
                    },
                },
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "is_active",
                            span: Span {
                                file_id: 0,
                                byte_offset: 42,
                                byte_length: 9,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Literal {
                        literal: Boolean(
                            true,
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 54,
                            byte_length: 4,
                        },
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    assert: false,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 38,
                        byte_length: 20,
                    },
                },
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "pi",
                            span: Span {
                                file_id: 0,
                                byte_offset: 67,
                                byte_length: 2,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Literal {
                        literal: Float {
                            value: 3.14,
                            text: None,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 72,
                            byte_length: 4,
                        },
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    assert: false,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 63,
                        byte_length: 13,
                    },
                },
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "name",
                            span: Span {
                                file_id: 0,
                                byte_offset: 85,
                                byte_length: 4,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Literal {
                        literal: String {
                            value: "Lisette",
                            raw: false,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 92,
                            byte_length: 9,
                        },
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    assert: false,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 81,
                        byte_length: 20,
                    },
                },
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "initial",
                            span: Span {
                                file_id: 0,
                                byte_offset: 110,
                                byte_length: 7,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Literal {
                        literal: Char(
                            "L",
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 120,
                            byte_length: 3,
                        },
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    assert: false,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 106,
                        byte_length: 17,
                    },
                },
                Match {
                    subject: Identifier {
                        value: "total",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 134,
                            byte_length: 5,
                        },
                        binding_id: None,
                        qualified: None,
                    },
                    arms: [
                        MatchArm {
                            pattern: Literal {
                                literal: Integer {
                                    value: 12,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 149,
                                    byte_length: 2,
                                },
                            },
                            expression: Call {
                                expression: Identifier {
                                    value: "print",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 155,
                                        byte_length: 5,
                                    },
                                    binding_id: None,
                                    qualified: None,
                                },
                                args: [
                                    Literal {
                                        literal: String {
                                            value: "Correct!",
                                            raw: false,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 161,
                                            byte_length: 10,
                                        },
                                    },
                                ],
                                spread: None,
                                raw_type_args: [],
                                resolved_type_args: [],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 155,
                                    byte_length: 17,
                                },
                                call_kind: None,
                            },
                        },
                        MatchArm {
                            pattern: WildCard {
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 181,
                                    byte_length: 1,
                                },
                            },
                            expression: Call {
                                expression: Identifier {
                                    value: "print",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 187,
                                        byte_length: 5,
                                    },
                                    binding_id: None,
                                    qualified: None,
                                },
                                args: [
                                    Literal {
                                        literal: String {
                                            value: "Incorrect!",
                                            raw: false,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 193,
                                            byte_length: 12,
                                        },
                                    },
                                ],
                                spread: None,
                                raw_type_args: [],
                                resolved_type_args: [],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 187,
                                    byte_length: 19,
                                },
                                call_kind: None,
                            },
                        },
                    ],
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 128,
                        byte_length: 84,
                    },
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 203,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 213,
        },
    },
]
