tests/spec/parse/snapshots/match_raw_string.snap
---
source: tests/spec/parse/mod.rs
description: "input: \nfn test(path: string) {\n  match path {\n    `C:\\` => print(\"windows\"),\n    _ => print(\"other\"),\n  }\n}\n"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "path",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 4,
                    },
                },
                annotation: Some(
                    Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 6,
                        },
                    },
                ),
                typed_pattern: None,
                ty: Variable(
                    -1,
                ),
            },
        ],
        return_annotation: Unknown,
        return_type: Variable(
            -1,
        ),
        visibility: Private,
        body: Block {
            items: [
                Match {
                    subject: Identifier {
                        value: "path",
                        ty: Variable(
                            -1,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 33,
                            byte_length: 4,
                        },
                        binding_id: None,
                        qualified: None,
                    },
                    arms: [
                        MatchArm {
                            pattern: WildCard {
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 75,
                                    byte_length: 1,
                                },
                            },
                            expression: Call {
                                expression: Identifier {
                                    value: "print",
                                    ty: Variable(
                                        -1,
                                    ),
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 80,
                                        byte_length: 5,
                                    },
                                    binding_id: None,
                                    qualified: None,
                                },
                                args: [
                                    Literal {
                                        literal: String(
                                            "other",
                                        ),
                                        ty: Variable(
                                            -1,
                                        ),
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 86,
                                            byte_length: 7,
                                        },
                                    },
                                ],
                                spread: None,
                                type_args: [],
                                ty: Variable(
                                    -1,
                                ),
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 80,
                                    byte_length: 14,
                                },
                            },
                        },
                    ],
                    origin: Explicit,
                    ty: Variable(
                        -1,
                    ),
                    span: Span {
                        file_id: 0,
                        byte_offset: 27,
                        byte_length: 72,
                    },
                },
            ],
            ty: Variable(
                -1,
            ),
            span: Span {
                file_id: 0,
                byte_offset: 23,
                byte_length: 78,
            },
        },
        ty: Variable(
            -1,
        ),
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 100,
        },
    },
]
