tests/spec/parse/snapshots/negative_pattern_i64_min.snap
---
source: tests/spec/parse/mod.rs
description: "input: \nfn classify(x: int) -> string {\n  match x {\n    -9223372036854775808 => \"min\",\n    _ => \"other\",\n  }\n}\n"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "classify",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 8,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 1,
                    },
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 3,
                        },
                    },
                ),
                typed_pattern: None,
                ty: Variable(
                    -1,
                ),
            },
        ],
        return_annotation: Constructor {
            name: "string",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 24,
                byte_length: 6,
            },
        },
        return_type: Variable(
            -1,
        ),
        visibility: Private,
        body: Block {
            items: [
                Match {
                    subject: Identifier {
                        value: "x",
                        ty: Variable(
                            -1,
                        ),
                        span: Span {
                            file_id: 0,
                            byte_offset: 41,
                            byte_length: 1,
                        },
                        binding_id: None,
                        qualified: None,
                    },
                    arms: [
                        MatchArm {
                            pattern: Literal {
                                literal: Integer {
                                    value: 9223372036854775808,
                                    text: Some(
                                        "-9223372036854775808",
                                    ),
                                },
                                ty: Variable(
                                    -1,
                                ),
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 49,
                                    byte_length: 20,
                                },
                            },
                            expression: Literal {
                                literal: String(
                                    "min",
                                ),
                                ty: Variable(
                                    -1,
                                ),
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 73,
                                    byte_length: 5,
                                },
                            },
                        },
                        MatchArm {
                            pattern: WildCard {
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 84,
                                    byte_length: 1,
                                },
                            },
                            expression: Literal {
                                literal: String(
                                    "other",
                                ),
                                ty: Variable(
                                    -1,
                                ),
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 89,
                                    byte_length: 7,
                                },
                            },
                        },
                    ],
                    origin: Explicit,
                    ty: Variable(
                        -1,
                    ),
                    span: Span {
                        file_id: 0,
                        byte_offset: 35,
                        byte_length: 66,
                    },
                },
            ],
            ty: Variable(
                -1,
            ),
            span: Span {
                file_id: 0,
                byte_offset: 31,
                byte_length: 72,
            },
        },
        ty: Variable(
            -1,
        ),
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 102,
        },
    },
]
